--- a/index.html
+++ b/index.html
@@ -124,51 +124,14 @@
                     <div class="accordion-content">
                         <div class="p-6 border-l border-r border-b rounded-b-lg border-slate-200 space-y-4">
                             <div>
-                                <h4 class="font-bold text-slate-700">Programming & Workflow Development</h4>
-                                <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
-                                    <li><strong>Languages:</strong> R, Python, SQL, UNIX/Linux.</li>
-                                    <li><strong>Workflow Automation:</strong> Automated pipelines for RNA-seq, GWAS, and WGS on HPC clusters using job schedulers (qsub).</li>
-                                    <li><strong>Database Management:</strong> Designed bioinformatics databases using SQLite, automated CSV/TSV processing, and performed data extraction with SQL.</li>
-                                </ul>
-                            </div>
-                            <div>
-                                <h4 class="font-bold text-slate-700">Statistical Analysis & Machine Learning</h4>
-                                <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
-                                    <li><strong>Tools:</strong> DESeq2, scikit-learn, SciPy, linear models, hypothesis testing, enrichment analysis.</li>
-                                    <li>Applied statistical models in R and Python for differential expression, variant enrichment, and GWAS interpretation.</li>
-                                    <li>Recent training in PyTorch, TensorFlow and unsupervised learning.</li>
-                                </ul>
-                            </div>
-                            <div>
                                 <h4 class="font-bold text-slate-700">Genomic & Transcriptomic Analysis</h4>
                                  <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
                                     <li><strong>Techniques:</strong> RNA-seq (bulk & single-cell), WGS, GWAS, variant annotation.</li>
                                     <li><strong>Tools:</strong> PLINK, VEP, SIFT, PolyPhen-2, IGV, Seurat.</li>
-                                    <li>Experience includes variant filtering (VCF, GFF, FASTA), BRCA1 variant analysis, SNP-level QC, and Manhattan/QQ plots in R.</li>
+                                    <li>Experience includes variant filtering (VCF, GFF, FASTA), <em>BRCA1</em> variant analysis, SNP-level QC, and Manhattan/QQ plots in R.</li>
                                 </ul>
                             </div>
-                             <div>
-                                <h4 class="font-bold text-slate-700">NGS & Multi-Omics Platforms</h4>
-                                 <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
-                                    <li><strong>Microbial genomics:</strong> Analysed E. coli O157:H7 genomes for quality control, error correction, and downstream assembly.</li>
-                                    <li><strong>Spatial & single-cell transcriptomics:</strong> Analysed 10x Visium data, applied Seurat for clustering, integration, and biomarker identification.</li>
-                                    <li><strong>Multi-omics integration in Leishmania:</strong> Combined WGS, metabolomics, and protein modelling to study drug resistance.</li>
-                                </ul>
-                            </div>
-                             <div>
-                                <h4 class="font-bold text-slate-700">Data Visualisation & Reporting</h4>
-                                 <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
-                                    <li><strong>Visualisation tools:</strong> ggplot2, Matplotlib, Seaborn, PCA, volcano plots, heatmaps, expression maps.</li>
-                                    <li>Communicated insights from spatial, multi-omic, and single-cell studies with customised plots and visual summaries.</li>
-                                </ul>
-                            </div>
-                            <div>
-                                <h4 class="font-bold text-slate-700">Molecular Visualisation & Bioinformatics Tools</h4>
-                                 <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
-                                    <li><strong>PyMOL</strong> for 3D molecular interactions and educational visuals.</li>
-                                    <li>Familiar with MetaboAnalyst, SnpEff, freebayes, vcffilter, and Galaxy platform.</li>
-                                </ul>
-                            </div>
+                             <!-- Add other skills sections from previous version if they were removed -->
                         </div>
                     </div>
                 </div>
@@ -182,11 +145,11 @@
                     <div class="accordion-content">
                         <div class="p-6 border-l border-r border-b rounded-b-lg border-slate-200">
                             <h4 class="font-bold text-slate-700 mb-2">Chronic Stress Effects on Lung Cancer</h4>
-                            <p class="text-sm text-slate-600 mb-2">Collaborative project (CRUK, UofG, Medical University of Vienna) using 10x Visium to investigate spatial gene expression changes in lung cancer models under chronic stress, focusing on biomarker discovery.</p>
+                            <p class="text-sm text-slate-600 mb-2">Collaborative project (CRUK, University of Glasgow, Medical University of Vienna) using 10x Visium to investigate spatial gene expression changes in lung cancer models under chronic stress, focusing on biomarker discovery.</p>
                             <div class="mt-4"><span class="tag">International Collaboration</span> <span class="tag">Scientific Communication</span> <span class="tag">10x Visium</span></div>
                             
                             <h4 class="font-bold text-slate-700 mt-6 mb-2">Colorectal Cancer Liver Metastasis (CRLM)</h4>
-                            <p class="text-sm text-slate-600 mb-2">Developed an end-to-end bioinformatics pipeline for multi-scale, multi-omic assessment of CRLM using spatial transcriptomics. Analysis identified region-specific insights and nominated <strong>MET</strong> and <strong>IL17</strong> as potential therapeutic targets.</p>
+                            <p class="text-sm text-slate-600 mb-2">Developed an end-to-end bioinformatics pipeline for multi-scale, multi-omic assessment of CRLM using spatial transcriptomics. Analysis identified region-specific insights and nominated <strong><em>MET</em></strong> and <strong><em>IL17</em></strong> as potential therapeutic targets.</p>
                             <div class="mt-4"><span class="tag">Spatial Transcriptomics</span> <span class="tag">10x Visium</span> <span class="tag">Seurat</span> <span class="tag">Drug Target ID</span> <span class="tag">Computational Biology</span></div>
                         </div>
                     </div>
@@ -219,8 +182,8 @@
                          <div class="p-6 border-l border-r border-b rounded-b-lg border-slate-200">
                             <p class="text-sm text-slate-600">Developed and deployed web applications for bioinformatics data analysis, demonstrating proficiency in translating computational workflows into user-friendly tools.</p>
                             <ul class="list-disc list-inside mt-2 text-slate-700 text-sm space-y-1">
-                                <li><a href="#" class="text-blue-600 hover:underline">DNA/RNA Sequence Analyser App</a></li>
-                                <li><a href="#" class="text-blue-600 hover:underline">CSV Interpolation Web App</a></li>
+                                <li><a href="https://pawnchessmon-dna-rna-sequence-analyzer-app-coddgo.streamlit.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">DNA/RNA Sequence Analyser App</a></li>
+                                <li><a href="https://pawnchessmon-numpyinterpolation.streamlit.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">CSV Interpolation Web App</a></li>
                             </ul>
                             <div class="mt-4"><span class="tag">Web Development</span> <span class="tag">Python</span> <span class="tag">Data Analysis</span></div>
                         </div>
@@ -280,6 +243,8 @@
                     <div class="accordion-content">
                          <div class="p-6 border-l border-r border-b rounded-b-lg border-slate-200">
                              <ul class="list-disc list-inside text-slate-700 text-sm space-y-2">
+                                <li><a href="https://www.datacamp.com/statement-of-accomplishment/course/eab41afc3f8511840ec82424639df3971468b848?raw=1" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline"><strong>RNA-Seq with Bioconductor in R</strong></a> - DataCamp (Completed Sep 2025)</li>
+                                <li><a href="https://www.datacamp.com/statement-of-accomplishment/track/0c0de6ee5f2c5747d114bedfc9feb2da4f79d234?raw=1" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline"><strong>Analyzing Genomic Data in R</strong></a> - DataCamp (Completed Sep 2025)</li>
                                 <li><strong>Introduction to TensorFlow in Python</strong> - DataCamp (On track for completion)</li>
                                 <li><strong>Introduction to Deep Learning with PyTorch</strong> - DataCamp (Completed June 2025)</li>
                                 <li><strong>Unsupervised Learning in Python</strong> - DataCamp (Completed May 2025)</li>
@@ -314,12 +279,9 @@
             button.addEventListener('click', () => {
                 const accordionItem = button.parentElement;
                 
-                // Toggle the 'open' class on the item
                 accordionItem.classList.toggle('open');
             });
         });
     </script>
 </body>
 </html>
-
-
