--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                             <div class="mt-2 mb-4"><span class="tag">Network Analysis</span> <span class="tag">Gephi</span> <span class="tag">BLASTn</span> <span class="tag">Gene Expression</span> <span class="tag">Immune Evasion</span></div>
 
                             <h4 class="font-bold text-slate-700 mb-2">Amphotericin B Resistance in <em>Leishmania</em></h4>
-                            <p class="text-sm text-slate-600 mb-2">Applied a multi-omic approach (WGS, metabolomics, protein modelling) to investigate drug resistance mechanisms. Analyzed Cyp51 mutations affecting ergosterol synthesis, identifying specific mutations and metabolic shifts contributing directly to resistance.</p>
+                            <p class="text-sm text-slate-600 mb-2">Applied a multi-omic approach (WGS, metabolomics, protein modelling) to investigate drug resistance mechanisms. Analyzed <em>Cyp51</em> mutations affecting ergosterol synthesis, identifying specific mutations and metabolic shifts contributing directly to resistance.</p>
                             <div class="mt-2"><span class="tag">Multi-Omics</span> <span class="tag">WGS</span> <span class="tag">Metabolomics</span> <span class="tag">Drug Resistance</span> <span class="tag">SnpEff</span></div>
                         </div>
                     </div>
