Revise profile and work experience details2
Updated profile and work experience sections for clarity and accuracy. Adjusted dates and improved formatting.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
             <section class="mb-8">
                 <h2 class="section-title">Profile</h2>
                 <p class="text-slate-700 leading-relaxed">
-                    Dynamic Bioinformatician and Demonstrator at the University of Glasgow with broad expertise spanning cancer biology, infection biology, and computational genomics. Proficient in analyzing complex multi-omic datasets, including spatial transcriptomics, from cancer models and protozoan parasites like <em>Plasmodium</em> and <em>Leishmania</em>. Adept at developing and applying advanced computational workflows in R, Python, and UNIX/Linux for NGS data processing, variant analysis, and network mapping. Passionate about translating complex biological questions into robust computational strategies, with strong interdisciplinary training and a proven ability to collaborate effectively in international research settings.
+                    Bioinformatician with broad expertise spanning cancer biology, infection biology, and computational genomics. 
+                    Proficient in analysing complex multi-omic datasets, including spatial transcriptomics, from cancer models and protozoan parasites like 
+                    <em>Plasmodium</em> and <em>Leishmania</em>. Adept at developing and applying advanced computational workflows in R, Python, and UNIX/Linux 
+                    for NGS data processing, variant analysis, and network mapping. Passionate about translating complex biological questions into robust 
+                    computational strategies, with strong interdisciplinary training and a proven ability to collaborate effectively in international research settings.
                 </p>
             </section>
 
@@ -125,13 +129,12 @@
                         <div class="p-6 border-l border-r border-b rounded-b-lg border-slate-200 space-y-4">
                             <div>
                                 <h4 class="font-bold text-slate-700">Genomic & Transcriptomic Analysis</h4>
-                                 <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
+                                <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
                                     <li><strong>Techniques:</strong> RNA-seq (bulk & single-cell), WGS, GWAS, variant annotation.</li>
                                     <li><strong>Tools:</strong> PLINK, VEP, SIFT, PolyPhen-2, IGV, Seurat.</li>
                                     <li>Experience includes variant filtering (VCF, GFF, FASTA), <em>BRCA1</em> variant analysis, SNP-level QC, and Manhattan/QQ plots in R.</li>
                                 </ul>
                             </div>
-                             <!-- Add other skills sections from previous version if they were removed -->
                         </div>
                     </div>
                 </div>
@@ -189,7 +192,8 @@
                         </div>
                     </div>
                 </div>
-                 <!-- Accordion Item: Work Experience -->
+                
+                <!-- Accordion Item: Work Experience -->
                 <div class="accordion-item">
                     <button class="accordion-button">
                         <span class="font-semibold text-lg text-slate-800">Work Experience</span>
@@ -199,18 +203,26 @@
                         <div class="p-6 border-l border-r border-b rounded-b-lg border-slate-200 space-y-4">
                             <div>
                                 <h3 class="font-semibold text-slate-800">Demonstrator</h3>
-                                <p class="text-sm text-slate-500">University of Glasgow, UK | 09/2024 - Present</p>
-                                <p class="text-sm mt-1 text-slate-600">Assist multiple cohorts of undergraduate, MSc and PhD students in mastering bioinformatics concepts, focusing on R, command-line tools, and genomic data analysis. Courses include: Omics & R, Statistics & Clinical Data, Command Line Omics & Genome Analysis, and RNA-seq.</p>
+                                <p class="text-sm text-slate-500">University of Glasgow, UK | 09/2024 – 09/2025</p>
+                                <p class="text-sm mt-1 text-slate-600">
+                                    Assisted multiple cohorts of undergraduate, MSc, and PhD students in mastering bioinformatics concepts, focusing on R, 
+                                    command-line tools, and genomic data analysis. Courses included: Omics & R, Statistics & Clinical Data, 
+                                    Command Line Omics & Genome Analysis, and RNA-seq.
+                                </p>
                             </div>
                             <div>
                                 <h3 class="font-semibold text-slate-800">Demonstrator</h3>
-                                <p class="text-sm text-slate-500">BSI Bioinformatics course | 12/2024 - Present</p>
-                                <p class="text-sm mt-1 text-slate-600">Led hands-on training in basic R and advanced scRNA-seq workflows using Seurat (R), covering data preprocessing, QC, visualisation, batch correction, cell-type annotation, and differential expression analysis.</p>
+                                <p class="text-sm text-slate-500">BSI Bioinformatics Course | 12/2024 – 09/2025</p>
+                                <p class="text-sm mt-1 text-slate-600">
+                                    Led hands-on training in basic R and advanced scRNA-seq workflows using Seurat (R), covering data preprocessing, 
+                                    QC, visualisation, batch correction, cell-type annotation, and differential expression analysis.
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                 <!-- Accordion Item: Education -->
+
+                <!-- Accordion Item: Education -->
                 <div class="accordion-item">
                     <button class="accordion-button">
                         <span class="font-semibold text-lg text-slate-800">Education</span>
@@ -223,7 +235,7 @@
                                 <p class="text-sm text-slate-500">University of Glasgow, UK | 2022 - 2023</p>
                             </div>
                             <div>
-                               <h3 class="font-semibold text-slate-800">BSc Zoology (83.36%)</h3>
+                               <h3 class="font-semibold text-lg text-slate-800">BSc Zoology (83.36%)</h3>
                                 <p class="text-sm text-slate-500">Cotton University, INDIA | 2018 - 2021</p>
                                 <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
                                     <li>Core studies in animal biology, systematics, comparative anatomy, and evolutionary biology.</li>
@@ -234,15 +246,16 @@
                         </div>
                     </div>
                 </div>
-                 <!-- Accordion Item: Professional Development -->
+
+                <!-- Accordion Item: Professional Development -->
                 <div class="accordion-item">
                     <button class="accordion-button">
                         <span class="font-semibold text-lg text-slate-800">Professional Development & Certifications</span>
                         <i data-lucide="chevron-down" class="accordion-icon"></i>
                     </button>
                     <div class="accordion-content">
-                         <div class="p-6 border-l border-r border-b rounded-b-lg border-slate-200">
-                             <ul class="list-disc list-inside text-slate-700 text-sm space-y-2">
+                        <div class="p-6 border-l border-r border-b rounded-b-lg border-slate-200">
+                            <ul class="list-disc list-inside text-slate-700 text-sm space-y-2">
                                 <li><a href="https://www.datacamp.com/statement-of-accomplishment/course/eab41afc3f8511840ec82424639df3971468b848?raw=1" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline"><strong>RNA-Seq with Bioconductor in R</strong></a> - DataCamp (Completed Sep 2025)</li>
                                 <li><a href="https://www.datacamp.com/statement-of-accomplishment/track/0c0de6ee5f2c5747d114bedfc9feb2da4f79d234?raw=1" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline"><strong>Analyzing Genomic Data in R</strong></a> - DataCamp (Completed Sep 2025)</li>
                                 <li><strong>Introduction to TensorFlow in Python</strong> - DataCamp (On track for completion)</li>
@@ -250,22 +263,23 @@
                                 <li><strong>Unsupervised Learning in Python</strong> - DataCamp (Completed May 2025)</li>
                                 <li><strong>Unsupervised Learning in R</strong> - DataCamp (Completed May 2025)</li>
                             </ul>
-                         </div>
+                        </div>
                     </div>
                 </div>
-                 <!-- Accordion Item: Publication -->
+
+                <!-- Accordion Item: Publication -->
                 <div class="accordion-item">
                     <button class="accordion-button">
                         <span class="font-semibold text-lg text-slate-800">Publication</span>
                         <i data-lucide="chevron-down" class="accordion-icon"></i>
                     </button>
                     <div class="accordion-content">
-                         <div class="p-6 border-l border-r border-b rounded-b-lg border-slate-200">
+                        <div class="p-6 border-l border-r border-b rounded-b-lg border-slate-200">
                             <p class="text-sm text-slate-700">
                                 Colin Wood, Luke McNickle, Andrew Cameron, <strong>Ritupam Sarma</strong>, Vaidehi Pandya, Joao Da Silva Filho, Colin Steele, John Cole, Joanne Edwards, Paul Horgan, Campbell Roxburgh. <em>Multi-scale multi-omic assessment of matched synchronous colorectal cancer liver metastases using multiple spatial transcriptomic tools</em> [abstract]. In: Proceedings of the American Association for Cancer Research Annual Meeting 2025; Part 1 (Regular Abstracts); 2025 Apr 25-30; Chicago, IL. Philadelphia (PA): AACR; Cancer Res 2025;85(8_Suppl_1):Abstract nr 4586.
                             </p>
                             <a href="https://doi.org/10.1158/1538-7445.AM2025-4586" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline text-sm mt-2 inline-block">https://doi.org/10.1158/1538-7445.AM2025-4586</a>
-                         </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -278,7 +292,6 @@
         document.querySelectorAll('.accordion-button').forEach(button => {
             button.addEventListener('click', () => {
                 const accordionItem = button.parentElement;
-                
                 accordionItem.classList.toggle('open');
             });
         });
