Revise skills and technical expertise in index.html added
Updated skills and expertise section in the accordion.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </div>
             </section>
             
-            <div class="space-y-4">
+             <div class="space-y-4">
                 <!-- Accordion Item: Skills & Technical Expertise -->
                 <div class="accordion-item">
                     <button class="accordion-button">
@@ -128,16 +128,55 @@
                     <div class="accordion-content">
                         <div class="p-6 border-l border-r border-b rounded-b-lg border-slate-200 space-y-4">
                             <div>
-                                <h4 class="font-bold text-slate-700">Genomic & Transcriptomic Analysis</h4>
+                                <h4 class="font-bold text-slate-700">Programming & Workflow Development</h4>
                                 <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
+                                    <li><strong>Languages:</strong> R, Python, SQL, UNIX/Linux.</li>
+                                    <li><strong>Workflow Automation:</strong> Automated pipelines for RNA-seq, GWAS, and WGS on HPC clusters using job schedulers (qsub).</li>
+                                    <li><strong>Database Management:</strong> Designed bioinformatics databases using SQLite, automated CSV/TSV processing, and performed data extraction with SQL.</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h4 class="font-bold text-slate-700">Statistical Analysis & Machine Learning</h4>
+                                <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
+                                    <li><strong>Tools:</strong> DESeq2, scikit-learn, SciPy, linear models, hypothesis testing, enrichment analysis.</li>
+                                    <li>Applied statistical models in R and Python for differential expression, variant enrichment, and GWAS interpretation.</li>
+                                    <li>Recent training in PyTorch, TensorFlow and unsupervised learning.</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h4 class="font-bold text-slate-700">Genomic & Transcriptomic Analysis</h4>
+                                 <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
                                     <li><strong>Techniques:</strong> RNA-seq (bulk & single-cell), WGS, GWAS, variant annotation.</li>
                                     <li><strong>Tools:</strong> PLINK, VEP, SIFT, PolyPhen-2, IGV, Seurat.</li>
-                                    <li>Experience includes variant filtering (VCF, GFF, FASTA), <em>BRCA1</em> variant analysis, SNP-level QC, and Manhattan/QQ plots in R.</li>
+                                    <li>Experience includes variant filtering (VCF, GFF, FASTA), BRCA1 variant analysis, SNP-level QC, and Manhattan/QQ plots in R.</li>
+                                </ul>
+                            </div>
+                             <div>
+                                <h4 class="font-bold text-slate-700">NGS & Multi-Omics Platforms</h4>
+                                 <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
+                                    <li><strong>Microbial genomics:</strong> Analysed E. coli O157:H7 genomes for quality control, error correction, and downstream assembly.</li>
+                                    <li><strong>Spatial & single-cell transcriptomics:</strong> Analysed 10x Visium data, applied Seurat for clustering, integration, and biomarker identification.</li>
+                                    <li><strong>Multi-omics integration in Leishmania:</strong> Combined WGS, metabolomics, and protein modelling to study drug resistance.</li>
+                                </ul>
+                            </div>
+                             <div>
+                                <h4 class="font-bold text-slate-700">Data Visualisation & Reporting</h4>
+                                 <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
+                                    <li><strong>Visualisation tools:</strong> ggplot2, Matplotlib, Seaborn, PCA, volcano plots, heatmaps, expression maps.</li>
+                                    <li>Communicated insights from spatial, multi-omic, and single-cell studies with customised plots and visual summaries.</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h4 class="font-bold text-slate-700">Molecular Visualisation & Bioinformatics Tools</h4>
+                                 <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
+                                    <li><strong>PyMOL</strong> for 3D molecular interactions and educational visuals.</li>
+                                    <li>Familiar with MetaboAnalyst, SnpEff, freebayes, vcffilter, and Galaxy platform.</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
+
 
                 <!-- Accordion Item 1: Cancer Biology -->
                 <div class="accordion-item">
