Update educational qualifications with project grades

--- a/index.html
+++ b/index.html
@@ -270,11 +270,11 @@
                     <div class="accordion-content">
                         <div class="p-6 border-l border-r border-b rounded-b-lg border-slate-200 space-y-4">
                              <div>
-                                <h3 class="font-semibold text-slate-800">MSc Bioinformatics (Merit)</h3>
+                                <h3 class="font-semibold text-slate-800">MSc Bioinformatics (Project Grade: Merit)</h3>
                                 <p class="text-sm text-slate-500">University of Glasgow, UK | 2022 - 2023</p>
                             </div>
                             <div>
-                               <h3 class="font-semibold text-lg text-slate-800">BSc Zoology (83.36%)</h3>
+                               <h3 class="font-semibold text-lg text-slate-800">BSc Zoology (Grade: 83.36%)</h3>
                                 <p class="text-sm text-slate-500">Cotton University, INDIA | 2018 - 2021</p>
                                 <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
                                     <li>Core studies in animal biology, systematics, comparative anatomy, and evolutionary biology.</li>
