--- a/index.html
+++ b/index.html
@@ -180,22 +180,30 @@
 
                 <!-- Accordion Item 1: Cancer Biology -->
                 <div class="accordion-item">
-                    <button class="accordion-button">
-                        <span class="font-semibold text-lg text-slate-800">Research | Cancer Biology & Spatial Transcriptomics</span>
-                        <i data-lucide="chevron-down" class="accordion-icon"></i>
-                    </button>
-                    <div class="accordion-content">
-                        <div class="p-6 border-l border-r border-b rounded-b-lg border-slate-200">
-                            <h4 class="font-bold text-slate-700 mb-2">Chronic Stress Effects on Lung Cancer</h4>
-                            <p class="text-sm text-slate-600 mb-2">Collaborative project (CRUK, University of Glasgow, Medical University of Vienna) using 10x Visium to investigate spatial gene expression changes in lung cancer models under chronic stress, focusing on biomarker discovery.</p>
-                            <div class="mt-4"><span class="tag">International Collaboration</span> <span class="tag">Scientific Communication</span> <span class="tag">10x Visium</span></div>
-                            
-                            <h4 class="font-bold text-slate-700 mt-6 mb-2">Colorectal Cancer Liver Metastasis (CRLM)</h4>
-                            <p class="text-sm text-slate-600 mb-2">Developed an end-to-end bioinformatics pipeline for multi-scale, multi-omic assessment of CRLM using spatial transcriptomics. Analysis identified region-specific insights and nominated <strong><em>MET</em></strong> and <strong><em>IL17</em></strong> as potential therapeutic targets.</p>
-                            <div class="mt-4"><span class="tag">Spatial Transcriptomics</span> <span class="tag">10x Visium</span> <span class="tag">Seurat</span> <span class="tag">Drug Target ID</span> <span class="tag">Computational Biology</span></div>
-                        </div>
-                    </div>
-                </div>
+                    <button class="accordion-button">
+                        <span class="font-semibold text-lg text-slate-800">Research | Cancer Biology & Spatial Transcriptomics</span>
+          _class="accordion-icon"></i>
+                    </button>
+                    <div class="accordion-content">
+                        <div class="p-6 border-l border-r border-b rounded-b-lg border-slate-200">
+                            <h4 class="font-bold text-slate-700 mb-2">Chronic Stress Effects on Lung Cancer</h4>
+Data-Source="https://pawnchessmon.github.io/Introduction/Lung_Cancer_Visium_Analysis.pdf"
+                            <p class="text-sm text-slate-600 mb-2">Collaborative project (CRUK, University of Glasgow, Medical University of Vienna) using 10x Visium to investigate spatial gene expression changes in lung cancer models under chronic stress, focusing on biomarker discovery.</p>
+                          	
+                                                        <p class="text-sm mt-3">
+  A-Target="https://pawnchessmon.github.io/Introduction/Lung_Cancer_Visium_Analysis.pdf"
+                              <a href="https://pawnchessmon.github.io/Introduction/Lung_Cancer_Visium_Analysis.pdf" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">
+                                View Project Presentation (PDF)
+                              </a>
+                            </p>
+                                                        <div class="mt-4"><span class="tag">International Collaboration</span> <span class="tag">Scientific Communication</span> <span class="tag">10x Visium</span></div>
+                            
+                            <h4 class="font-bold text-slate-700 mt-6 mb-2">Colorectal Cancer Liver Metastasis (CRLM)</h4>
+                            <p class="text-sm text-slate-600 mb-2">Developed an end-to-end bioinformatics pipeline for multi-scale, multi-omic assessment of CRLM using spatial transcriptomics. Analysis identified region-specific insights and nominated <strong><em>MET</em></strong> and <strong><em>IL17</em></strong> as potential therapeutic targets.</p>
+                            <div class="mt-4"><span class="tag">Spatial Transcriptomics</span> <span class="tag">10x Visium</span> <span class="tag">Seurat</span> <span class="tag">Drug Target ID</span> <span class="tag">Computational Biology</span></div>
+                        </div>
+                    </div>
+        _class="accordion-item">
                 <!-- Accordion Item 2: Infection Biology -->
                 <div class="accordion-item">
                     <button class="accordion-button">
