--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                                     <!-- Tools -->
                                     <div class="sub-accordion-item">
                                         <button class="sub-accordion-button">
-                                            <span class="font-semibold text-sm text-slate-700">Tools & Technologies</span>
+                                            <span class="font-semibold text-sm text-slate-700">Tools & Technology</span>
                                             <i data-lucide="chevron-right" class="sub-accordion-icon"></i>
                                         </button>
                                         <div class="sub-accordion-content">
@@ -401,7 +401,7 @@
                                     <!-- Tools -->
                                     <div class="sub-accordion-item">
                                         <button class="sub-accordion-button">
-                                            <span class="font-semibold text-sm text-slate-700">Tools & Technologies</span>
+                                            <span class="font-semibold text-sm text-slate-700">Tools & Technology</span>
                                             <i data-lucide="chevron-right" class="sub-accordion-icon"></i>
                                         </button>
                                         <div class="sub-accordion-content">
@@ -512,7 +512,7 @@
                     <!-- Tools -->
                     <div class="sub-accordion-item">
                         <button class="sub-accordion-button">
-                            <span class="font-semibold text-sm text-slate-700">Tools & Technologies</span>
+                            <span class="font-semibold text-sm text-slate-700">Tools & Technology</span>
                             <i data-lucide="chevron-right" class="sub-accordion-icon"></i>
                         </button>
                         <div class="sub-accordion-content">
@@ -606,7 +606,7 @@
                     <!-- Tools -->
                     <div class="sub-accordion-item">
                         <button class="sub-accordion-button">
-                            <span class="font-semibold text-sm text-slate-700">Tools & Technologies</span>
+                            <span class="font-semibold text-sm text-slate-700">Tools & Technology</span>
                             <i data-lucide="chevron-right" class="sub-accordion-icon"></i>
                         </button>
                         <div class="sub-accordion-content">
