--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <!-- Header Section -->
             <header class="text-center mb-10">
                 <h1 class="text-4xl md:text-5xl font-bold text-slate-800 tracking-tight">RITUPAM SARMA</h1>
-                <p class="text-lg md:text-xl text-slate-600 mt-2">Bioinformatician & Graduate Teaching Assistant | University of Glasgow</p>
+                <p class="text-lg md:text-xl text-slate-600 mt-2">Bioinformatician & Demonstrator | University of Glasgow</p>
                 <div class="flex justify-center items-center flex-wrap gap-x-6 gap-y-2 mt-4 text-sm text-slate-500">
                     <a href="mailto:ritupam.sarma@gmail.com" class="flex items-center hover:text-blue-600"><i data-lucide="mail" class="icon"></i> ritupam.sarma@gmail.com</a>
                     <a href="https://www.linkedin.com/in/ritupam-sarma-44189b277/" target="_blank" rel="noopener noreferrer" class="flex items-center hover:text-blue-600"><i data-lucide="linkedin" class="icon"></i> LinkedIn</a>
@@ -143,13 +143,17 @@
                     <span class="tag">Infection Biology</span>
                     <span class="tag">Parasitology</span>
                     <span class="tag">Spatial Transcriptomics</span>
-                    <span class="tag">scRNA-seq</span>
+                    <span class="tag">Single Cell</span>
+                    <span class="tag">Bulk RNA-seq</span>
+                    <span class="tag">Protei modelling (UCSF Chimera, PyMol)</span>
                     <span class="tag">NGS Data Analysis</span>
                     <span class="tag">Computational Biology</span>
                     <span class="tag">Statistical Analysis</span>
                     <span class="tag">R (Seurat, DESeq2)</span>
                     <span class="tag">Python</span>
-                    <span class="tag">UNIX/Linux</span>
+                    <span class="tag">Nextflow for pipeline management</span>
+                    <span class="tag">GitHub for version control</span>
+                    <span class="tag">Deep Learning (PyTorch)</span>
                 </div>
             </section>
             
