Fix typo in 'Protein modelling' tag

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <span class="tag">Spatial Transcriptomics</span>
                     <span class="tag">Single Cell</span>
                     <span class="tag">Bulk RNA-seq</span>
-                    <span class="tag">Protei modelling (UCSF Chimera, PyMol)</span>
+                    <span class="tag">Protein modelling (UCSF Chimera, PyMol)</span>
                     <span class="tag">NGS Data Analysis</span>
                     <span class="tag">Computational Biology</span>
                     <span class="tag">Statistical Analysis</span>
