Add new DataCamp courses to index.html
SQL intermediate and basic

--- a/index.html
+++ b/index.html
@@ -722,6 +722,8 @@
                             <ul class="list-disc list-inside text-slate-700 text-sm space-y-2">
                                 <li><a href="https://www.datacamp.com/statement-of-accomplishment/course/eab41afc3f8511840ec82424639df3971468b848?raw=1" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline"><strong>RNA-Seq with Bioconductor in R</strong></a> - DataCamp (Completed Sep 2025)</li>
                                 <li><a href="https://www.datacamp.com/statement-of-accomplishment/track/0c0de6ee5f2c5747d114bedfc9feb2da4f79d234?raw=1" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline"><strong>Analyzing Genomic Data in R</strong></a> - DataCamp (Completed Sep 2025)</li>
+                                <li><a href="https://www.datacamp.com/statement-of-accomplishment/course/a344bcca10267a8a7e540a1ec636d6775a0f5df5?raw=1" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline"><strong>Intermediate SQL</strong></a> - DataCamp (Completed Nov 2025)</li>
+                                <li><a href="https://www.datacamp.com/statement-of-accomplishment/course/fc70d472a05a30d8e5205d355614a1309b72cd6e?raw=1" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline"><strong>Introduction to SQL</strong></a> - DataCamp (Completed Nov 2025)</li>
                                 <li><strong>Introduction to TensorFlow in Python</strong> - DataCamp (On track for completion)</li>
                                 <li><strong>Introduction to Deep Learning with PyTorch</strong> - DataCamp (Completed June 2025)</li>
                                 <li><strong>Unsupervised Learning in Python</strong> - DataCamp (Completed May 2025)</li>
