Enhance database management description in index.html
Updated the description of database management skills to include various SQL flavors.

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                 <ul class="list-disc list-inside mt-1 text-slate-600 text-sm space-y-1">
                                     <li><strong>Languages:</strong> R, Python, SQL, UNIX/Linux.</li>
                                     <li><strong>Workflow Automation:</strong> Automated pipelines for RNA-seq, GWAS, and WGS on HPC clusters using job schedulers (qsub).</li>
-                                    <li><strong>Database Management:</strong> Designed bioinformatics databases using SQLite, automated CSV/TSV processing, and performed data extraction with SQL.</li>
+                                    <li><strong>Database Management:</strong> Designed bioinformatics databases using different flavours of SQL including mySQL, PostGreSQL, SQLite; automated CSV/TSV processing, and performed data extraction with SQL.</li>
                                 </ul>
                             </div>
                             <div>
